--- a/index.html
+++ b/index.html
@@ -7,17 +7,19 @@
   <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
-  <div id="app">
-    <div>
-      <label for="goal"></label>
-      <input type="text" id="goal" v-model="enteredValue"/>
-      <button v-on:click="addGoal">Add Goal</button>
-    </div>
-    <ul>
-      <li v-for="goal in goals">{{ goal }}</li>
-    </ul>
-  </div>
-  
+  <header>
+    <h1>Vue Course Goals</h1>
+  </header>
+  <section id="user-goal">
+    <h2>My Course Goal</h2>
+    <p>{{ courseGoal }}</p>
+    <!-- Cannot write complex code but you can use ternary or javascript expressions -->
+    <p v-html="outputGoal()"></p>
+    <p>{{ Math.random() }}</p>
+    <p>{{ 4+6 }}</p>
+    <!-- When using vue to add href, will not read href="{{vueLink}}", use v-bind:href="vueLink" -->
+    <p>Learn more <a v-bind:href="vueLink">about Vue</a>.</p>
+  </section>
 
   <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
     <script src="app.js"></script>
